--- a/style.css
+++ b/style.css
@@ -37,11 +37,10 @@ body, ul, h2, h6 {
 }
 
 .cabecalho {
-    border: 1px solid red;
     display: flex;
-    padding: 30px 0;
+    padding: 50px 0;
     align-items: center;
-    width: 90%;
+    width: 100%;
     justify-content: space-around;
     font-size: 20px;
     left: -20px;
@@ -54,7 +53,6 @@ body, ul, h2, h6 {
 }
 
 .btn-app {
-    border: 1px solid red;
     display: flex;
     gap: 13px;
     width: 10px;
@@ -95,7 +93,9 @@ body, ul, h2, h6 {
 .conteudo {
    display:flex; 
    flex-direction: row;
-   width: 90%;
+   padding: 80px;
+   margin-right: -200px;
+
 } 
 
 .conteudo-inicial{
@@ -103,13 +103,11 @@ body, ul, h2, h6 {
    color: #111827;
    bottom: -155px;
    position: relative;
-   padding: 90px;
-   right: -100px;
-
+   margin-right: -230px;
 }
 
 .conteudo-inicial-txt span{
-    bottom: -125px;
+    bottom: -100px;
    
 }
 
@@ -119,13 +117,14 @@ body, ul, h2, h6 {
     position: relative;
     bottom: -100px;
     color: #374151;
-    padding: 10px;
     width: 60%;
-    margin-left: -40px;
     font-weight: 400;
-    right: -120px;
     border: 1px solid red; 
     }
+
+..conteudo-inicial-menor-txt span{
+   
+}
 
 .btn-comecar{
    background-color:#6D55FF;
@@ -164,43 +163,38 @@ body, h2, h3, h6 {
     margin: 0 10px;
 }
 
-
-.recursos {
-    justify-content: center;
-    padding: 110px;
-}
-
-.principal-personalizado{
-    justify-content: center;
+.personalizado-cabecalho{
+    padding: 55px ;
+    justify-self: center;
     
 }
 
-.personalizado-texto-title {
+.principal-personalizado{
+    position: relative;
+    font-size: 42px;
+    color: #111827;
+}
+
+.principal-personalizado-paragrafo{
+    color: #374151;
+    font-weight: 100; 
+    font-size: 18px;
+}
+
+.personalizados-txt-1,
+.personalizados-txt-2 {
      font-size: 24px; 
-     margin: 10px 0; 
+     margin: 10px 0;
+     justify-content: space-around;
     }
 
-.personalizado-texto-paragrafo { 
+.personalizado-texto-item-1,
+.personalizado-texto-item-2 { 
         font-size: 16px; 
-        margin: 5px 0; 
+        margin: 5px 0;
+        color: #374151;
+        font-weight: 100; 
     }
-
-.personalizado-logo-item {
-     width: 100px; 
-     height: 100px; 
-     margin: 10px; 
-    }
-
-.container-1-personalizados, 
-.container-2-personalizados { 
-        display: flex; 
-        flex-direction: row;
-        align-items: center; 
-        padding: 20px; 
-      }
-
-
-
 
 .interface{
     
